--- a/css/type.css
+++ b/css/type.css
@@ -251,12 +251,10 @@ small,
 
 .nano {
   font-size: .1517rem;
-  line-height: rem;
 }
 
 .pico {
   font-size: .0809rem;
-  line-height: rem;
 }
 
 ul {
@@ -646,12 +644,10 @@ legend {
 
   .nano {
     font-size: .1517rem;
-    line-height: -0rem;
   }
 
   .pico {
     font-size: .0809rem;
-    line-height: -0rem;
   }
 
   ul,
@@ -1063,12 +1059,10 @@ legend {
 
   .nano {
     font-size: .1517rem;
-    line-height: rem;
   }
 
   .pico {
     font-size: .0809rem;
-    line-height: rem;
   }
 
   ul,
@@ -1480,12 +1474,10 @@ legend {
 
   .nano {
     font-size: .1517rem;
-    line-height: rem;
   }
 
   .pico {
     font-size: .0809rem;
-    line-height: rem;
   }
 
   ul,
